@@ -54,7 +54,7 @@ namespace Banshee.AlarmClock
         
         void IExtensionService.Initialize ()
         {
-            Log.Debug("Initializing Alarm Plugin", "");
+            Log.Debug("Initializing Alarm Plugin");
 
             AlarmClockService.theService = this;            
             ThreadStart alarmThreadStart = new ThreadStart(AlarmClockService.DoWait);
@@ -63,39 +63,47 @@ namespace Banshee.AlarmClock
             
             action_service = ServiceManager.Get<InterfaceActionService> ("InterfaceActionService");
             
-            actions = new ActionGroup("Alarm");
+            actions = new ActionGroup("AlarmClock");
             
             actions.Add(new ActionEntry [] {
+                new ActionEntry("AlarmClockAction", null,
+                    Catalog.GetString("Alarm Clock"), null,
+                    null, null),
+                
                 new ActionEntry("SetSleepTimerAction", null,
                     Catalog.GetString("Sleep Timer..."), null,
                     Catalog.GetString("Set the sleep timer value"), OnSetSleepTimer),
                 
                 new ActionEntry("SetAlarmAction", null,
                     Catalog.GetString("Alarm..."), null,
-                    Catalog.GetString("Set the alarm time"), OnSetAlarm)
+                    Catalog.GetString("Set the alarm time"), OnSetAlarm),
+                
+                new ActionEntry ("AlarmClockConfigureAction", Stock.Properties,
+                    Catalog.GetString ("_Configure..."), null,
+                    Catalog.GetString ("Configure the Alarm Clock plugin"), OnConfigure)
             });
             
-            action_service.UIManager.InsertActionGroup(actions, 3);
+            action_service.UIManager.InsertActionGroup(actions, 0);
             ui_manager_id = action_service.UIManager.AddUiFromResource("AlarmMenu.xml");
         }
         
         public void Dispose ()
         {
-            Log.Debug("Disposing Alarm Plugin", "");
+            Log.Debug("Disposing Alarm Plugin");
             action_service.UIManager.RemoveUi(ui_manager_id);
             action_service.UIManager.RemoveActionGroup(actions);
             actions = null;
             
             if(sleep_timer_id > 0) {
                 GLib.Source.Remove(sleep_timer_id);
-                Log.Debug("Disabling old sleep timer", "");
+                Log.Debug("Disabling old sleep timer");
             }
             alarmThread.Abort();
         }
             
         public static void DoWait()
         {
-            Log.Debug("Alarm thread started", "");
+            Log.Debug("Alarm thread started");
             AlarmThread theAlarm = new AlarmThread(AlarmClockService.theService);
             theAlarm.MainLoop();
         }
@@ -109,7 +117,7 @@ namespace Banshee.AlarmClock
         {
             if(sleep_timer_id > 0){
                 GLib.Source.Remove(sleep_timer_id);
-                Log.Debug("Disabling old sleep timer", "");
+                Log.Debug("Disabling old sleep timer");
             }
             new SleepTimerConfigDialog(this);
         }
@@ -122,7 +130,7 @@ namespace Banshee.AlarmClock
         public void SetSleepTimer(int timervalue)
         {
             if(timervalue != 0) {
-                Log.Debug(String.Format("Sleep Timer set to {0}", timervalue), "");
+                Log.Debug(String.Format("Sleep Timer set to {0}", timervalue));
                 sleep_timer_id = GLib.Timeout.Add((uint) timervalue * 60 * 1000, onSleepTimerActivate);
             }
             this.sleep_timer_value = timervalue;
@@ -131,20 +139,27 @@ namespace Banshee.AlarmClock
         public bool onSleepTimerActivate()
         {
             if(ServiceManager.PlayerEngine.CurrentState == PlayerEngineState.Playing){
-                Log.Debug("Sleep Timer has gone off.  Fading out till end of song.", "");
+                Log.Debug("Sleep Timer has gone off.  Fading out till end of song.");
                 new VolumeFade(ServiceManager.PlayerEngine.Volume, 0,
                         (ushort) (ServiceManager.PlayerEngine.Length - ServiceManager.PlayerEngine.Position));
                 GLib.Timeout.Add((ServiceManager.PlayerEngine.Length - ServiceManager.PlayerEngine.Position) * 1000, delegate{
-                    Log.Debug("Sleep Timer: Pausing.", "");
+                    Log.Debug("Sleep Timer: Pausing.");
                     ServiceManager.PlayerEngine.Pause();
                     return false;
                     }
                 );
                 
             }else{
-                Log.Debug("Sleep Timer has gone off, but we're not playing.  Refusing to pause.", "");
+                Log.Debug("Sleep Timer has gone off, but we're not playing.  Refusing to pause.");
             }
             return(false);
+        }
+            
+        private void OnConfigure (object o, EventArgs args)
+        {
+            ConfigurationDialog dialog = new ConfigurationDialog (this);
+            dialog.Run ();
+            dialog.Destroy ();
         }
         
         #region Configuration properties
